fixed the issue with mis align language bar

--- a/index.html
+++ b/index.html
@@ -35,14 +35,18 @@
 <body role='flatdoc'>
     <div class='header'>
         <div class='left'>
-            <a href="http://www.appacitive.com"><img src="style/images/logo_small.png" height="40" /></a>
+            <a href="http://www.appacitive.com">
+                <img src="http://appacitive.github.io/guides%20template/styles/logo_small.png" height="47" /></a>
         </div>
         <div class='right'>
             <ul>
-                <li><a href='https://portal.appacitive.com/login.html?rel=docs'>Sign in</a></li>
-                <li><a href='https://portal.appacitive.com/signup.html?rel=docs'>Sign up</a></li>
+                <li><a href='https://portal.appacitive.com/login.html?rel=docs'>Home</a></li>
+                <li><a href='https://portal.appacitive.com/login.html?rel=docs'>Features</a></li>
+                <li><a href='https://portal.appacitive.com/login.html?rel=docs'>Pricing</a></li>
+                <li><a href='https://portal.appacitive.com/signup.html?rel=docs'>Blogs</a></li>
                 <li class="active"><a href="index.html">Documentation</a></li>
                 <li><a href='https://support.appacitive.com'>Support</a></li>
+                <li><a href='https://portal.appacitive.com/login.html?rel=docs'>Login</a></li>
             </ul>
         </div>
     </div>
