--- a/index.html
+++ b/index.html
@@ -67,8 +67,6 @@
         </div>
     </div>
 
-
-
     <div class='content-root'>
         <div class='menubar'>
             <div class='menu section' role='flatdoc-menu'></div>
@@ -84,6 +82,12 @@
         </div>
         <div role='flatdoc-content' class='content'></div>
     </div>
-</body>
 
+    <div class="footer">
+        <div class="copyright">
+            &#169 2013 Appacitive Software Pvt Ltd
+        </div>
+
+    </div>
+</body>
 </html>
