--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     <!-- Flatdoc theme -->
     <link href="style/bootstrap.min.css" rel="stylesheet" />
     <link href="style/theme/white/style.css" rel="stylesheet" />
-    <link href="style/custom.css" rel="stylesheet" />
-    <link href="style/highlight.css" rel="stylesheet" />
+    <link href="style/theme/white/custom.css" rel="stylesheet" />
+    <link href="style/theme/white/highlight.css" rel="stylesheet" />
+
+    <!--<link href="style/theme/black/style.css" rel="stylesheet" />
+    <link href="style/theme/black/custom.css" rel="stylesheet" />
+    <link href="style/theme/black/highlight.css" rel="stylesheet" />-->
 
     <!-- Flatdoc -->
     <script src="scripts/infra/jquery1.9.1.js"></script>
@@ -21,7 +25,7 @@
     <script src="scripts/infra/flatdoc.js"></script>
     <script src="scripts/infra/md5.js"></script>
 
-    <script src="style/theme/white/script.js"></script>
+    <script src="scripts/code/script.js"></script>
 
     <!-- Meta -->
     <meta content="Appacitive - Documentation" property="og:title">
@@ -37,8 +41,7 @@
 <body role='flatdoc'>
     <div class='header'>
         <div class='left'>
-            <a href="http://www.appacitive.com">
-                <img src="http://appacitive.github.io/guides%20template/styles/logo_small.png" height="47" /></a>
+            <a href="http://www.appacitive.com" class="logo"></a>
         </div>
         <div class='right'>
             <ul>
@@ -47,7 +50,7 @@
                 <li><a href='https://portal.appacitive.com/login.html?rel=docs'>Pricing</a></li>
                 <li><a href='https://portal.appacitive.com/signup.html?rel=docs'>Blogs</a></li>
                 <li class="active"><a href="index.html">Documentation</a></li>
-                <li><a href='https://support.appacitive.com'>Support</a></li>
+                <li><a href='https://support.appacitive.com'>Feedback & Support</a></li>
                 <li style="display: none;"><a id="aLogin" href='https://portal.appacitive.com/login.html?rel=docs'>Login</a></li>
             </ul>
         </div>
@@ -87,7 +90,6 @@
         <div class="copyright">
             &#169 2013 Appacitive Software Pvt Ltd
         </div>
-
     </div>
 </body>
 </html>
