Added documentation for article create.

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         </div>
         <div class="language">
             <ul class="nav nav-pills">
-                <li><a data-lang="csharp">.Net</a></li>
+                <li><a data-lang="rest">Curl</a></li>
                 <li><a data-lang="javascript">javascript</a></li>
-                <li><a data-lang="rest">Rest</a></li>
+                <li><a data-lang="csharp">.Net</a></li>
                 <li><a data-lang="ios">iOS</a></li>
                 <li><a data-lang="android">Android</a></li>
             </ul>
