theme styling separated

--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 
     <!-- Flatdoc theme -->
     <link href="style/bootstrap.min.css" rel="stylesheet" />
-    <link href="style/theme/white/style.css" rel="stylesheet" />
-    <link href="style/theme/white/custom.css" rel="stylesheet" />
-    <link href="style/theme/white/highlight.css" rel="stylesheet" />
+    <link href="style/style.css" rel="stylesheet" />
+    <link href="style/custom.css" rel="stylesheet" />
+    <!--<link href="style/theme/white/theme.css" rel="stylesheet" />-->
 
-    <!--<link href="style/theme/black/style.css" rel="stylesheet" />
-    <link href="style/theme/black/custom.css" rel="stylesheet" />
-    <link href="style/theme/black/highlight.css" rel="stylesheet" />-->
+    <link href="style/theme/black/theme.css" rel="stylesheet" />
 
     <!-- Flatdoc -->
     <script src="scripts/infra/jquery1.9.1.js"></script>
