made white theme default

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link href="style/bootstrap.min.css" rel="stylesheet" />
     <link href="style/style.css" rel="stylesheet" />
     <link href="style/custom.css" rel="stylesheet" />
-    <!--<link href="style/theme/white/theme.css" rel="stylesheet" />-->
+    <link href="style/theme/white/theme.css" rel="stylesheet" />
 
-    <link href="style/theme/black/theme.css" rel="stylesheet" />
+    <!--<link href="style/theme/black/theme.css" rel="stylesheet" />-->
 
     <!-- Flatdoc -->
     <script src="scripts/infra/jquery1.9.1.js"></script>
