page width changed for code part. dl styling added and applied for system properties

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <link href="style/theme/black/theme.min.css" rel="stylesheet" title="black"/>
     
     <!-- Flatdoc -->
-    <!--<script src="scripts/infra/jquery1.9.1.js"></script>
+    <script src="scripts/infra/jquery1.9.1.js"></script>
     <script src="scripts/infra/legacy.js"></script>
     <script src="scripts/infra/highlight.js"></script>
     <script src="scripts/infra/flatdoc.js"></script>
     <script src="scripts/infra/md5.js"></script>
-    <script src="scripts/code/script.js"></script>-->
+    <script src="scripts/code/script.js"></script>
 
-    <script src="scripts/bundle.min.js"></script>
+    <!--<script src="scripts/bundle.min.js"></script>-->
 
     <!-- Meta -->
     <meta content="Appacitive - Documentation" property="og:title">
