moved the script to bottom of page

--- a/index.html
+++ b/index.html
@@ -16,27 +16,6 @@
 
     <link href="style/theme/white/theme.min.css" rel="stylesheet" title="white"/>
     <link href="style/theme/black/theme.min.css" rel="stylesheet" title="black"/>
-    
-    <!-- Flatdoc -->
-    <script src="scripts/infra/jquery1.9.1.js"></script>
-    <script src="scripts/infra/legacy.js"></script>
-    <script src="scripts/infra/highlight.js"></script>
-    <script src="scripts/infra/flatdoc.js"></script>
-    <script src="scripts/infra/md5.js"></script>
-    <script src="scripts/code/script.js"></script>
-
-    <!--<script src="scripts/bundle.min.js"></script>-->
-
-    <!-- Meta -->
-    <meta content="Appacitive - Documentation" property="og:title">
-    <meta content="Appacitive - Documentation." name="description">
-
-    <!-- Initializer -->
-    <script>
-        Flatdoc.run({
-            fetcher: Flatdoc.file('index.md')
-        });
-    </script>
 </head>
 <body role='flatdoc'>
     <div class='header'>
@@ -97,5 +76,27 @@
             &#169 2013 Appacitive Software Pvt Ltd
         </div>
     </div>
+
+    <!-- Flatdoc -->
+    <!--<script src="scripts/infra/jquery1.9.1.js"></script>
+    <script src="scripts/infra/legacy.js"></script>
+    <script src="scripts/infra/highlight.js"></script>
+    <script src="scripts/infra/flatdoc.js"></script>
+    <script src="scripts/infra/md5.js"></script>
+    <script src="scripts/code/script.js"></script>-->
+
+    <script src="scripts/bundle.min.js"></script>
+
+    <!-- Meta -->
+    <meta content="Appacitive - Documentation" property="og:title">
+    <meta content="Appacitive - Documentation." name="description">
+
+    <!-- Initializer -->
+    <script>
+        Flatdoc.run({
+            fetcher: Flatdoc.file('index.md')
+        });
+    </script>
+
 </body>
 </html>
