google font included via javascript

--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
             &#169 2013 Appacitive Software Pvt Ltd
         </div>
     </div>
-
+    
     <!-- Flatdoc -->
-    <!--<script src="scripts/infra/jquery1.9.1.js"></script>
+    <!--<script src="scripts/infra/gFont.js"></script>
+    <script src="scripts/infra/jquery1.9.1.js"></script>
     <script src="scripts/infra/legacy.js"></script>
     <script src="scripts/infra/highlight.js"></script>
     <script src="scripts/infra/flatdoc.js"></script>
