--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
     </div>
     
     <!-- Flatdoc -->
-    <!--<script src="scripts/infra/gFont.js"></script>
-    <script src="scripts/infra/jquery1.9.1.js"></script>
+<!--    <script src="scripts/infra/jquery1.9.1.js"></script>
     <script src="scripts/infra/legacy.js"></script>
     <script src="scripts/infra/highlight.js"></script>
     <script src="scripts/infra/flatdoc.js"></script>
