--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="style/theme/white/theme.min.css" rel="stylesheet" title="white"/>
     <link href="style/theme/black/theme.min.css" rel="stylesheet" title="black"/>
 
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body role='flatdoc'>
     <div class='header'>
