--- a/jssdk.html
+++ b/jssdk.html
@@ -80,7 +80,7 @@
     <meta content="Appacitive - Documentation." name="description">
 
     <!-- Initializer -->
-    <script>
+    <script  id = "scriptFlatdocReady">
         Flatdoc.run({
             fetcher: Flatdoc.github('chiragsanghvi/JavascriptSDK')
         });
