--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <meta content="Appacitive - Documentation." name="description">
 
     <!-- Initializer -->
-    <script>
+    <script id = "scriptFlatdocReady">
         Flatdoc.run({
             fetcher: Flatdoc.file('index.md')
         });
