--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
     </div>
     
     <!-- Flatdoc -->
-<!--    <script src="scripts/infra/jquery1.9.1.js"></script>
+<!--<script src="scripts/infra/jquery1.9.1.js"></script>
     <script src="scripts/infra/legacy.js"></script>
     <script src="scripts/infra/highlight.js"></script>
     <script src="scripts/infra/flatdoc.js"></script>
     <script src="scripts/infra/md5.js"></script>
     <script src="scripts/code/script.js"></script>-->
 
-    <script src="scripts/bundle.min.js"></script>
+    <script src="scripts/bundle.min.js" type="text/javascript"></script>
 
     <!-- Meta -->
     <meta content="Appacitive - Documentation" property="og:title">
