--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <script src="scripts/infra/md5.js"></script>
     <script src="scripts/code/script.js"></script>-->
 
-    <script src="scripts/bundle.min.js" type="text/javascript"></script>
+    <script src="scripts/bundle.min.js" type="text/javascript" id="scriptBundle"></script>
 
     <!-- Meta -->
     <meta content="Appacitive - Documentation" property="og:title">
