changed menubar links

--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
         </div>
         <div class='right'>
             <ul>
-                <li><a href='https://portal.appacitive.com/login.html?rel=docs'>Home</a></li>
-                <li><a href='https://portal.appacitive.com/login.html?rel=docs'>Features</a></li>
-                <li><a href='https://portal.appacitive.com/login.html?rel=docs'>Pricing</a></li>
-                <li><a href='https://portal.appacitive.com/signup.html?rel=docs'>Blogs</a></li>
-                <li class="active"><a href="index.html">Documentation</a></li>
-                <li><a href='https://support.appacitive.com'>Feedback & Support</a></li>
+                <li><a href='http://appacitive.com'>Home</a></li>
+                <li><a href='http://appacitive.com/features/'>Features</a></li>
+                <li><a href='http://appacitive.com/pricing/'>Pricing</a></li>
+                <li><a href='http://blogs.appacitive.com'>Blogs</a></li>
+                <li><a href='http://support.appacitive.com'>Feedback & Support</a></li>
                 <li style="display: none;"><a id="aLogin" href='https://portal.appacitive.com/login.html?rel=docs'>Login</a></li>
             </ul>
         </div>
