--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
     <meta charset='utf-8'>
@@ -58,10 +58,10 @@
             <div class="toolbar">
                 <ul class="nav nav-pills">
                     <li><a data-lang="rest">Curl</a></li>
+                    <li><a data-lang="ios">iOS</a></li>
                     <li><a data-lang="javascript">javascript</a></li>
                     <li><a data-lang="csharp">.Net</a></li>
-                    <!--<li><a data-lang="ios">iOS</a></li>
-                    <li><a data-lang="android">Android</a></li>-->
+                    <!--<li><a data-lang="android">Android</a></li>-->
                 </ul>
                 <div class="theme-switch">
                     <a class="theme theme-white" data-theme="white" title="Switch to White theme"></a>
