--- a/v0.9/index.html
+++ b/v0.9/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width">
 
     <title>Appacitive - Documentation</title>
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="favicon.ico?v=__RevisionNoGoesHere__" />
 
     <!-- Flatdoc theme -->
     <!--<link href="../style/style.css" rel="stylesheet" />
     <link href="../style/custom.css" rel="stylesheet" />-->
 
-    <link href="../style/bundle.min.css" rel="stylesheet" />
+    <link href="../style/bundle.min.css?v=__RevisionNoGoesHere__" rel="stylesheet" />
 
-    <link href="../style/theme/white/theme.min.css" rel="stylesheet" title="white"/>
-    <link href="../style/theme/black/theme.min.css" rel="stylesheet" title="black"/>
+    <link href="../style/theme/white/theme.min.css?v=__RevisionNoGoesHere__" rel="stylesheet" title="white"/>
+    <link href="../style/theme/black/theme.min.css?v=__RevisionNoGoesHere__" rel="stylesheet" title="black"/>
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 </head>
@@ -86,7 +86,7 @@
     <script src="../scripts/infra/md5.js"></script>
     <script src="../scripts/code/script.js"></script>-->
 
-    <script src="../scripts/bundle.min.js" type="text/javascript"></script>
+    <script src="../scripts/bundle.min.js?v=__RevisionNoGoesHere__" type="text/javascript"></script>
 
     <!-- Meta -->
     <meta content="Appacitive - Documentation" property="og:title">
