support for python added

--- a/v1.0/index.html
+++ b/v1.0/index.html
@@ -60,6 +60,7 @@
                     <li><a data-lang="rest">Curl</a></li>
                     <li><a data-lang="javascript">javascript</a></li>
                     <li><a data-lang="csharp">.Net</a></li>
+                    <li><a data-lang="python">python</a></li>
                     <!--<li><a data-lang="ios">iOS</a></li>
                     <li><a data-lang="android">Android</a></li>-->
                 </ul>
