--- a/v1.0/index.html
+++ b/v1.0/index.html
@@ -61,8 +61,8 @@
                     <li><a data-lang="javascript">javascript</a></li>
                     <li><a data-lang="csharp">.Net</a></li>
                     <li><a data-lang="python">python</a></li>
-                    <!--<li><a data-lang="ios">iOS</a></li>
-                    <li><a data-lang="android">Android</a></li>-->
+                    <li><a data-lang="ios"> iOS</a></li>
+                    <!--<li><a data-lang="android">Android</a></li>-->
                 </ul>
                 <div class="theme-switch">
                     <a class="theme theme-white" data-theme="white" title="Switch to White theme"></a>
