--- a/v0.9/index.html
+++ b/v0.9/index.html
@@ -60,8 +60,8 @@
                     <li><a data-lang="rest">Curl</a></li>
                     <li><a data-lang="javascript">javascript</a></li>
                     <li><a data-lang="csharp">.Net</a></li>
-                    <!--<li><a data-lang="ios">iOS</a></li>
-                    <li><a data-lang="android">Android</a></li>-->
+                    <li><a data-lang="ios">iOS</a></li>
+                    <li><a data-lang="android">Android</a></li>
                 </ul>
                 <div class="theme-switch">
                     <a class="theme theme-white" data-theme="white" title="Switch to White theme"></a>
