changed styling and parsing for sdk specific docs

--- a/jssdk.html
+++ b/jssdk.html
@@ -81,6 +81,7 @@
 
     <!-- Initializer -->
     <script  id = "scriptFlatdocReady">
+        window.docType = "SDK";
         Flatdoc.run({
             fetcher: Flatdoc.github('chiragsanghvi/JavascriptSDK')
         });
