--- a/iossdk.html
+++ b/iossdk.html
@@ -81,6 +81,7 @@
 
     <!-- Initializer -->
     <script  id = "scriptFlatdocReady">
+        window.docType = "SDK";
         Flatdoc.run({
             fetcher: Flatdoc.github('appacitive/appacitive-ios-sdk')
         });
