fixed an issue with buildscript

--- a/dotnetsdk.html
+++ b/dotnetsdk.html
@@ -1,11 +1,11 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
 
-    <title>Appacitive - Javascript - Documentation</title>
+    <title>Appacitive - .NET - Documentation</title>
     <link rel="shortcut icon" href="favicon.ico" />
 
     <!-- Flatdoc theme -->
@@ -14,8 +14,8 @@
 
     <link href="style/bundle.min.css" rel="stylesheet" />
 
-    <link href="style/theme/white/theme.min.css" rel="stylesheet" title="white"/>
-    <link href="style/theme/black/theme.min.css" rel="stylesheet" title="black"/>
+    <link href="style/theme/white/theme.min.css" rel="stylesheet" title="white" />
+    <link href="style/theme/black/theme.min.css" rel="stylesheet" title="black" />
 
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
 </head>
@@ -63,7 +63,7 @@
             &#169 2013 Appacitive Software Pvt Ltd
         </div>
     </div>
-    
+
     <!-- Flatdoc -->
     <!--<script src="scripts/infra/gFont.js"></script>
     <script src="scripts/infra/jquery1.9.1.js"></script>
@@ -80,10 +80,10 @@
     <meta content="Appacitive - Documentation." name="description">
 
     <!-- Initializer -->
-    <script  id = "scriptFlatdocReady">
+    <script id="scriptFlatdocReady">
         window.docType = "SDK";
         Flatdoc.run({
-            fetcher: Flatdoc.github('chiragsanghvi/JavascriptSDK')
+            fetcher: Flatdoc.github('appacitive/appacitive-dotnet-sdk')
         });
     </script>
 
