--- a/v1.0/index.html
+++ b/v1.0/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width">
 
     <title>Appacitive - Documentation</title>
-    <link rel="shortcut icon" href="favicon.ico?v=__RevisionNoGoesHere__" />
+    <link rel="shortcut icon" href="../favicon.ico?v=__RevisionNoGoesHere__" />
 
     <!-- Flatdoc theme -->
     <!--<link href="../style/style.css" rel="stylesheet" />
